# Dum-E

./: .env.example  .gitignore  CLAUDE.md  README.md  config.example.yaml  dum-e.py  dum_e.py  interfaces.py  logging_config.py  mcp_server.py  old_pipecat_server.py  orchestrator.py  pipecat_server.py  pyproject.toml  requirements.txt  utils.py
embodiment/: interfaces.py
embodiment/so_arm10x/: __init__.py  agent.py  client.py  controller.py  interface.py  server.py  skills.py
policy/gr00t/: service.py
scripts/: build_gr00t_image.sh  mock_policy_server.py  test_live_policy_server.py
shared/: README.md  __init__.py  message_broker.py  task_manager.py  tool_registry.py
shared/fleet_manager/: __init__.py  shm.py
shared/message_broker/: __init__.py  shm.py
shared/task_manager/: __init__.py  shm.py
tests/: README.md  mocks.py  requirements-test.txt  test_agent_interfaces.py  test_container_contract.py  test_dum_e.py  test_gr00t_service.py  test_mcp_interfaces.py  test_orchestrator.py  test_pipecat_server.py  test_robot_agent.py  test_shm_broker.py  test_shm_task_manager.py  test_speech_live.py  test_utils.py
