[project]
name = "dum-e"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.129.0",
    "fastmcp>=2.14.5",
    "langfuse>=3.14.3",
    "lerobot[feetech]==0.3.3",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "msgpack>=1.0",
    "pipecat-ai[anthropic,aws,aws-nova-sonic,deepgram,elevenlabs,silero,webrtc,mcp,runner]==1.3.0",
    "pydantic>=2.0",
    "python-dotenv>=1.2.1",
    "pyzmq>=27.1.0",
    "strands-agents[anthropic,otel]==1.12.0",
    "uv>=0.10.4",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]
